syntax = "proto3";

package caller;

option go_package = "github.com/manhrev/runtracking/backend/caller/pkg/api;caller";

service Caller {
    rpc CallSample(CallSampleRequest) returns (CallSampleReply);
}

message CallSampleRequest {
    int32 num = 1;
}

message CallSampleReply {
    int32 rev = 1;
}